# notify-component

./: CHANGELOG.md  README.md  autogen.sh  configure.ac
.github/: CODEOWNERS
.github/workflows/: L1-tests.yml  native-build.yml
cov_docker_script/: component_config.json  configure_options.conf
notify_comp/source/NotifyComponent/: cosa_apis_NotifyComponent.c  plugin_main.c  plugin_main.h  ssp_global.h
notify_comp/source/test/: run_ut.sh
source/: Makefile.am
source/NotifyComponent/: Makefile.am  cosa_apis_NotifyComponent.c  cosa_apis_NotifyComponent.h  ssp_action.c  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source/test/: Makefile.am  cosa_apis_NotifyComponent_test.cpp  gtest_main.cpp  notify_comp_mock.cpp  notify_comp_mock.h  run_ut.sh
